--- a/fingerfollowlayout/build.gradle
+++ b/fingerfollowlayout/build.gradle
@@ -1,16 +1,37 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
+apply plugin: 'com.novoda.bintray-release'
+
+buildscript {
+    repositories {
+        jcenter()
+    }
+    dependencies {
+        classpath 'com.novoda:bintray-release:0.8.1'
+    }
+}
+
+publish {
+    userOrg = 'ulfyyang'
+    repoName = 'ulfy-maven'
+    groupId = 'com.ulfy.android.controls'
+    artifactId = 'fingerfollow-layout'
+    publishVersion = '1.0.0'
+    uploadName = 'fingerfollow-layout'
+    desc = '跟随手指移动的布局'
+    website = 'https://github.com/ulfyyang/ulfy-fingerfollow-layout'
+}
 
 android {
     compileSdkVersion 28
-    buildToolsVersion "29.0.0"
+
     defaultConfig {
-        applicationId "com.example.ulfy_fingerfollow_layout"
         minSdkVersion 19
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -21,9 +42,6 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    implementation project(':fingerfollowlayout')
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
